# libsum

./: .gitignore  CMakeLists.txt  README.md  install.sh  todo.txt
backend/: CMakeLists.txt
backend/examples/: generator_example.cpp  keygen_example.cpp
backend/include/sum/backend/: generator.h  manifest_builder.h
backend/src/: generator.cpp  manifest_builder.cpp
backend/tests/: manifest_builder_test.cpp  update_certificate_test.cpp
backend/tools/: sum_build_manifest.cpp  sum_create_ca.cpp  sum_generate.cpp  sum_keygen.cpp
client/: CMakeLists.txt
client/examples/: validator_example.cpp
client/include/sum/client/: validator.h
client/src/: validator.cpp
client/tools/: sum_inspect.cpp  sum_inspect.cpp.old  sum_verify.cpp
cmake/: sumConfig.cmake.in
common/: CMakeLists.txt
common/include/sum/common/: crypto.h  limits.h  manifest.h  secure_vector.h
common/proto/: manifest.pb.cc  manifest.pb.h  manifest.proto
common/src/: crypto_aes.cpp  crypto_aes_streaming.cpp  crypto_ed25519.cpp  crypto_keys.cpp  crypto_sha256_streaming.cpp  crypto_x25519.cpp  manifest.cpp  manifest_json_old.cpp.bak  openssl_wrappers.h  x509_constants.h  x509_extension.cpp
common/tests/: certificate_test.cpp  crypto_test.cpp  manifest_test.cpp
docs/: ERROR_HANDLING.md  SECURE_UPDATE_FLOW.md  SECURITY.md  SPEC.md  TIME_SOURCES.md
docs/iso26262/: 01_Item_Definition.md  02_HARA.md  03_Functional_Safety_Concept.md  04_Technical_Safety_Concept.md  05_Safety_Requirements_Specification.md  06_Verification_Validation_Report.md  07_Safety_Case.md  08_Assumptions_of_Use.md
src/: crypto_aes.cpp  generator.cpp  validator.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  backend_client_test.cpp  tools_end_to_end_test.sh
tests/testdata/: test_cert.pem  test_key.pem
tests/unit/: CMakeLists.txt
